--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
     <head>
-        <title>Практика 2</title>
+        <title>Добро пожаловать!</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="vis">
+            <div class="shir">
+                <div> <h1 align="center"><b>Описание</b></h1></div>
+                <div><p align="center"><button>Начать</button></p></div>
+            </div>
+        </div>
+        <hr>
+        <div class="opis"><h1 align="center">Вы попали на данный сайт, для того чтобы пройти тест на время!</h1></div>
     </body>
 </html>
