--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
         <title>Добро пожаловать!</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js"> </script>
     </head>
     <body>
         <div class="vis">
             <div class="shir">
+                <div><h3 align="center">Таймер:</h3><p id="timer" align="center">0</p><p align="center">Секунд</p></div>
                 <div> <h1 align="center"><b>Описание</b></h1></div>
-                <div><p align="center"><button>Начать</button></p></div>
+                <div><p align="center"><button onclick="primer(); init();">Начать</button></p></div>
             </div>
         </div>
         <hr>
         <div class="opis"><h1 align="center">Вы попали на данный сайт, для того чтобы пройти тест на время!</h1></div>
+        <div id="game" class="game"></div>
     </body>
 </html>
